# QT_QML

./: .gitignore  CMakeLists.txt  main.qml  qt_qml.cpp
